class ioLibraryError(RuntimeError):
    """Base error for ioLibrary."""


IoLibraryError = ioLibraryError
